src/snapshots/kajit__disasm_tests__disasm_postcard_all_scalars_x86_64.snap
---
source: src/disasm_tests.rs
expression: out
---
=== postcard/all_scalars ===
> push rbp
  sub rsp, 0x40
  mov qword [rsp], rbp
  mov qword [rsp + 0x10], r12
  mov qword [rsp + 0x18], r13
  mov qword [rsp + 0x20], r14
  mov qword [rsp + 0x28], r15
  mov r14, rdi
  mov r15, rsi
  mov r12, qword [r15]
  mov r13, qword [r15 + 0x8]
  cmp r12, r13
  jnb $+0x3a
  movzx r10d, byte [r12]
  cmp r10d, 0x1
  ja $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0xd
  jmp $+0x504
  mov byte [r14 + 0x40], r10b
  add r12, 0x1
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x4e1
  cmp r12, r13
  jnb $+0x18
  movzx r10d, byte [r12]
  mov byte [r14 + 0x41], r10b
  add r12, 0x1
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x4b0
  cmp r12, r13
  jnb $+0x5f
  movzx r10d, byte [r12]
  test r10d, 0x80
  jnz $+0x14
  add r12, 0x1
  mov word [r14 + 0x3c], r10w
  jmp $+0x34
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [r14 + 0x3c]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x44d
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x438
  cmp r12, r13
  jnb $+0x5e
  movzx r10d, byte [r12]
  test r10d, 0x80
  jnz $+0x13
  add r12, 0x1
  mov dword [r14 + 0x30], r10d
  jmp $+0x34
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [r14 + 0x30]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x3d6
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x3c1
  cmp r12, r13
  jnb $+0x5e
  movzx r10d, byte [r12]
  test r10d, 0x80
  jnz $+0x13
  add r12, 0x1
  mov qword [r14 + 0x18], r10
  jmp $+0x34
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [r14 + 0x18]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x35f
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x34a
  cmp r12, r13
  jnb $+0x18
  movzx r10d, byte [r12]
  mov byte [r14 + 0x42], r10b
  add r12, 0x1
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x319
  cmp r12, r13
  jnb $+0x70
  movzx r10d, byte [r12]
  test r10d, 0x80
  jnz $+0x25
  add r12, 0x1
  mov r11d, r10d
  shr r11d, 0x1
  and r10d, 0x1
  neg r10d
  xor r10d, r11d
  mov word [r14 + 0x3e], r10w
  jmp $+0x34
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [r14 + 0x3e]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x2a5
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x290
  cmp r12, r13
  jnb $+0x6f
  movzx r10d, byte [r12]
  test r10d, 0x80
  jnz $+0x24
  add r12, 0x1
  mov r11d, r10d
  shr r11d, 0x1
  and r10d, 0x1
  neg r10d
  xor r10d, r11d
  mov dword [r14 + 0x34], r10d
  jmp $+0x34
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [r14 + 0x34]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x21d
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x208
  cmp r12, r13
  jnb $+0x6f
  movzx r10d, byte [r12]
  test r10d, 0x80
  jnz $+0x24
  add r12, 0x1
  mov r11d, r10d
  shr r11d, 0x1
  and r10d, 0x1
  neg r10d
  xor r10d, r11d
  mov qword [r14 + 0x20], r10
  jmp $+0x34
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [r14 + 0x20]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x195
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x180
  mov r10, r13
  sub r10, r12
  cmp r10, 0x4
  jb $+0x17
  mov r10d, dword [r12]
  mov dword [r14 + 0x38], r10d
  add r12, 0x4
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x146
  mov r10, r13
  sub r10, r12
  cmp r10, 0x8
  jb $+0x17
  mov r10, qword [r12]
  mov qword [r14 + 0x28], r10
  add r12, 0x8
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x10c
  cmp r12, r13
  jnb $+0xcb
  movzx r10d, byte [r12]
  test r10d, 0x80
  jnz $+0xc
  add r12, 0x1
  jmp $+0x3d
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [rsp + 0x30]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0xb0
  mov r10d, dword [rsp + 0x30]
  mov dword [rsp + 0x30], r10d
  mov r11, r13
  sub r11, r12
  cmp r11, r10
  jb $+0x59
  mov r11, r12
  mov qword [r15], r12
  mov rdi, r15
  mov rsi, r11
  mov edx, r10d
  mov rax, 0x<imm>
  call rax
  mov r11d, dword [r15 + 0x10]
  test r11d, r11d
  jnz $+0x62
  mov r10d, dword [rsp + 0x30]
  mov qword [r14 + 0x8], rax
  mov qword [r14 + 0x10], r10
  mov qword [r14], r10
  add r12, r10
  jmp $+0x0
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x28
  mov qword [r15], r12
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbp, qword [rsp]
  add rsp, 0x40
  pop rbp
  ret
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbp, qword [rsp]
  add rsp, 0x40
  pop rbp
  ret
