src/snapshots/kajit__disasm_tests__disasm_postcard_enum_external_aarch64.snap
---
source: src/disasm_tests.rs
expression: out
---
=== postcard/enum_external ===
> sub sp, sp, #0x40
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  cmp x19, x20
  b.hs $+0x48
  ldrb w9, [x19]
  tbnz w9, #0x7, $+0xc
  add x19, x19, #0x1
  b $+0x44
  str x19, [x22]
  mov x0, x22
  add x1, sp, #0x30
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x214
  ldr w9, [sp, #0x30]
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x200
  cmp w9, #0x0
  b.eq $+0x20
  cmp w9, #0x1
  b.eq $+0x24
  cmp w9, #0x2
  b.eq $+0x114
  mov w9, #0xe
  str w9, [x22, #0x10]
  b $+0x1dc
  mov w9, #0x0
  strb w9, [x21]
  b $+0x1b8
  mov w9, #0x1
  strb w9, [x21]
  cmp x19, x20
  b.hs $+0xa0
  ldrb w9, [x19]
  tbnz w9, #0x7, $+0xc
  add x19, x19, #0x1
  b $+0x34
  str x19, [x22]
  mov x0, x22
  add x1, sp, #0x30
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x184
  ldr w9, [sp, #0x30]
  str w9, [sp, #0x30]
  sub x10, x20, x19
  cmp x10, x9
  b.lo $+0x50
  mov x10, x19
  str x19, [x22]
  mov x0, x22
  mov x1, x10
  mov w2, w9
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x140
  ldr w9, [sp, #0x30]
  str x0, [x21, #0x10]
  str x9, [x21, #0x18]
  str x9, [x21, #0x8]
  add x19, x19, x9
  b $+0x4
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x118
  cmp x19, x20
  b.hs $+0x2c
  ldrb w9, [x19]
  cmp w9, #0x1
  b.hi $+0x8
  b $+0x10
  mov w9, #0xd
  str w9, [x22, #0x10]
  b $+0xf4
  strb w9, [x21, #0x20]
  add x19, x19, #0x1
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xdc
  b $+0xc0
  mov w9, #0x2
  strb w9, [x21]
  cmp x19, x20
  b.hs $+0xa0
  ldrb w9, [x19]
  tbnz w9, #0x7, $+0xc
  add x19, x19, #0x1
  b $+0x34
  str x19, [x22]
  mov x0, x22
  add x1, sp, #0x30
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x8c
  ldr w9, [sp, #0x30]
  str w9, [sp, #0x30]
  sub x10, x20, x19
  cmp x10, x9
  b.lo $+0x50
  mov x10, x19
  str x19, [x22]
  mov x0, x22
  mov x1, x10
  mov w2, w9
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x48
  ldr w9, [sp, #0x30]
  str x0, [x21, #0x10]
  str x9, [x21, #0x18]
  str x9, [x21, #0x8]
  add x19, x19, x9
  b $+0x4
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x20
  b $+0x4
  str x19, [x22]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x40
  ret
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x40
  ret
