src/snapshots/kajit__disasm_tests__disasm_postcard_enum_external_x86_64.snap
---
source: src/disasm_tests.rs
expression: out
---
=== postcard/enum_external ===
> push rbp
  sub rsp, 0x40
  mov qword [rsp], rbp
  mov qword [rsp + 0x10], r12
  mov qword [rsp + 0x18], r13
  mov qword [rsp + 0x20], r14
  mov qword [rsp + 0x28], r15
  mov r14, rdi
  mov r15, rsi
  mov r12, qword [r15]
  mov r13, qword [r15 + 0x8]
  cmp r12, r13
  jnb $+0x5d
  movzx r10d, byte [r12]
  test r10d, 0x80
  jnz $+0x9
  add r12, 0x1
  jmp $+0x52
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [rsp + 0x30]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r11d, dword [r15 + 0x10]
  test r11d, r11d
  jnz $+0x2b2
  mov r10d, dword [rsp + 0x30]
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x295
  cmp r10d, 0x0
  jz $+0x2a
  cmp r10d, 0x1
  jz $+0x26
  cmp r10d, 0x2
  jz $+0x159
  mov dword [r15 + 0x10], 0xe
  jmp $+0x25e
  mov byte [r14], 0x0
  jmp $+0x22d
  mov byte [r14], 0x1
  cmp r12, r13
  jnb $+0xcb
  movzx r10d, byte [r12]
  test r10d, 0x80
  jnz $+0xc
  add r12, 0x1
  jmp $+0x3d
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [rsp + 0x30]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x1f5
  mov r10d, dword [rsp + 0x30]
  mov dword [rsp + 0x30], r10d
  mov r11, r13
  sub r11, r12
  cmp r11, r10
  jb $+0x59
  mov r11, r12
  mov qword [r15], r12
  mov rdi, r15
  mov rsi, r11
  mov edx, r10d
  mov rax, 0x<imm>
  call rax
  mov r11d, dword [r15 + 0x10]
  test r11d, r11d
  jnz $+0x1a7
  mov r10d, dword [rsp + 0x30]
  mov qword [r14 + 0x10], rax
  mov qword [r14 + 0x18], r10
  mov qword [r14 + 0x8], r10
  add r12, r10
  jmp $+0x0
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x16d
  cmp r12, r13
  jnb $+0x3a
  movzx r10d, byte [r12]
  cmp r10d, 0x1
  ja $+0x5
  jmp $+0x10
  mov dword [r15 + 0x10], 0xd
  jmp $+0x13d
  mov byte [r14 + 0x20], r10b
  add r12, 0x1
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x11a
  jmp $+0xed
  mov byte [r14], 0x2
  cmp r12, r13
  jnb $+0xcb
  movzx r10d, byte [r12]
  test r10d, 0x80
  jnz $+0xc
  add r12, 0x1
  jmp $+0x3d
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [rsp + 0x30]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0xb5
  mov r10d, dword [rsp + 0x30]
  mov dword [rsp + 0x30], r10d
  mov r11, r13
  sub r11, r12
  cmp r11, r10
  jb $+0x59
  mov r11, r12
  mov qword [r15], r12
  mov rdi, r15
  mov rsi, r11
  mov edx, r10d
  mov rax, 0x<imm>
  call rax
  mov r11d, dword [r15 + 0x10]
  test r11d, r11d
  jnz $+0x67
  mov r10d, dword [rsp + 0x30]
  mov qword [r14 + 0x10], rax
  mov qword [r14 + 0x18], r10
  mov qword [r14 + 0x8], r10
  add r12, r10
  jmp $+0x0
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x2d
  jmp $+0x0
  mov qword [r15], r12
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbp, qword [rsp]
  add rsp, 0x40
  pop rbp
  ret
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbp, qword [rsp]
  add rsp, 0x40
  pop rbp
  ret
