src/snapshots/kajit__disasm_tests__disasm_postcard_nested_struct_x86_64.snap
---
source: src/disasm_tests.rs
expression: out
---
=== postcard/nested_struct ===
> push rbp
  sub rsp, 0x40
  mov qword [rsp], rbp
  mov qword [rsp + 0x10], r12
  mov qword [rsp + 0x18], r13
  mov qword [rsp + 0x20], r14
  mov qword [rsp + 0x28], r15
  mov r14, rdi
  mov r15, rsi
  mov r12, qword [r15]
  mov r13, qword [r15 + 0x8]
  cmp r12, r13
  jnb $+0x5e
  movzx r10d, byte [r12]
  test r10d, 0x80
  jnz $+0x13
  add r12, 0x1
  mov dword [r14], r10d
  jmp $+0x34
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [r14]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x12b
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x116
  cmp r12, r13
  jnb $+0x5e
  movzx r10d, byte [r12]
  test r10d, 0x80
  jnz $+0x13
  add r12, 0x1
  mov dword [r14 + 0x4], r10d
  jmp $+0x34
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [r14 + 0x4]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0xb4
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x9f
  cmp r12, r13
  jnb $+0x5e
  movzx r10d, byte [r12]
  test r10d, 0x80
  jnz $+0x13
  add r12, 0x1
  mov dword [r14 + 0x8], r10d
  jmp $+0x34
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [r14 + 0x8]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x3d
  jmp $+0x10
  mov dword [r15 + 0x10], 0x1
  jmp $+0x28
  mov qword [r15], r12
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbp, qword [rsp]
  add rsp, 0x40
  pop rbp
  ret
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbp, qword [rsp]
  add rsp, 0x40
  pop rbp
  ret
