src/snapshots/kajit__disasm_tests__disasm_postcard_option_aarch64.snap
---
source: src/disasm_tests.rs
expression: out
---
=== postcard/option ===
> sub sp, sp, #0x60
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  cmp x19, x20
  b.hs $+0x14
  ldrb w9, [x19]
  strb w9, [sp, #0x38]
  add x19, x19, #0x1
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x3c4
  ldrb w9, [sp, #0x38]
  cmp w9, #0x0
  b.eq $+0x98
  str x21, [sp, #0x38]
  add x21, sp, #0x40
  cmp x19, x20
  b.hs $+0x48
  ldrb w9, [x19]
  tbnz w9, #0x7, $+0x10
  add x19, x19, #0x1
  str w9, [x21]
  b $+0x30
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x368
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x358
  ldr x21, [sp, #0x38]
  mov x0, #<imm>
  movk x0, #<imm>, lsl #16
  movk x0, #<imm>, lsl #32
  movk x0, #<imm>, lsl #48
  add x1, x21, #0x38
  add x2, sp, #0x40
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  b $+0x2c
  mov x0, #<imm>
  movk x0, #<imm>, lsl #16
  movk x0, #<imm>, lsl #32
  movk x0, #<imm>, lsl #48
  add x1, x21, #0x38
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  cmp x19, x20
  b.hs $+0x14
  ldrb w9, [x19]
  strb w9, [sp, #0x38]
  add x19, x19, #0x1
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x2d8
  ldrb w9, [sp, #0x38]
  cmp w9, #0x0
  b.eq $+0xf0
  str x21, [sp, #0x38]
  add x21, sp, #0x40
  cmp x19, x20
  b.hs $+0xa0
  ldrb w9, [x19]
  tbnz w9, #0x7, $+0xc
  add x19, x19, #0x1
  b $+0x34
  str x19, [x22]
  mov x0, x22
  add x1, sp, #0x30
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x280
  ldr w9, [sp, #0x30]
  str w9, [sp, #0x30]
  sub x10, x20, x19
  cmp x10, x9
  b.lo $+0x50
  mov x10, x19
  str x19, [x22]
  mov x0, x22
  mov x1, x10
  mov w2, w9
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x23c
  ldr w9, [sp, #0x30]
  str x0, [x21, #0x8]
  str x9, [x21, #0x10]
  str x9, [x21]
  add x19, x19, x9
  b $+0x4
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x214
  ldr x21, [sp, #0x38]
  mov x0, #<imm>
  movk x0, #<imm>, lsl #16
  movk x0, #<imm>, lsl #32
  movk x0, #<imm>, lsl #48
  add x1, x21, #0x0
  add x2, sp, #0x40
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  b $+0x2c
  mov x0, #<imm>
  movk x0, #<imm>, lsl #16
  movk x0, #<imm>, lsl #32
  movk x0, #<imm>, lsl #48
  add x1, x21, #0x0
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  cmp x19, x20
  b.hs $+0x14
  ldrb w9, [x19]
  strb w9, [sp, #0x38]
  add x19, x19, #0x1
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x194
  ldrb w9, [sp, #0x38]
  cmp w9, #0x0
  b.eq $+0x148
  str x21, [sp, #0x38]
  add x21, sp, #0x40
  cmp x19, x20
  b.hs $+0xa0
  ldrb w9, [x19]
  tbnz w9, #0x7, $+0xc
  add x19, x19, #0x1
  b $+0x34
  str x19, [x22]
  mov x0, x22
  add x1, sp, #0x30
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x13c
  ldr w9, [sp, #0x30]
  str w9, [sp, #0x30]
  sub x10, x20, x19
  cmp x10, x9
  b.lo $+0x50
  mov x10, x19
  str x19, [x22]
  mov x0, x22
  mov x1, x10
  mov w2, w9
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr w9, [x22, #0x10]
  cbnz w9, $+0xf8
  ldr w9, [sp, #0x30]
  str x0, [x21, #0x8]
  str x9, [x21, #0x10]
  str x9, [x21]
  add x19, x19, x9
  b $+0x4
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xd0
  cmp x19, x20
  b.hs $+0x48
  ldrb w9, [x19]
  tbnz w9, #0x7, $+0x10
  add x19, x19, #0x1
  str w9, [x21, #0x18]
  b $+0x30
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x18
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x88
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x78
  ldr x21, [sp, #0x38]
  mov x0, #<imm>
  movk x0, #<imm>, lsl #16
  movk x0, #<imm>, lsl #32
  movk x0, #<imm>, lsl #48
  add x1, x21, #0x18
  add x2, sp, #0x40
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  b $+0x2c
  mov x0, #<imm>
  movk x0, #<imm>, lsl #16
  movk x0, #<imm>, lsl #32
  movk x0, #<imm>, lsl #48
  add x1, x21, #0x18
  mov x8, #<imm>
  movk x8, #<imm>, lsl #16
  movk x8, #<imm>, lsl #32
  movk x8, #<imm>, lsl #48
  blr x8
  str x19, [x22]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x60
  ret
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x60
  ret
